--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -15,6 +15,7 @@ jobs:
           python-version: "3.x"
       - name: Install dependencies
         run: |
+          python3 -m pip install --upgrade build
           python3 -m pip install --upgrade pip
           python3 -m pip install --upgrade twine
       - name: Build and publish
